--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "gatsby": "^3.14.2",
-    "gatsby-theme-minimal": "^1.0.0",
+    "gatsby-theme-terminal": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
