--- a/gatsby-theme-terminal/package.json
+++ b/gatsby-theme-terminal/package.json
@@ -5,6 +5,25 @@
   "author": "Mogeko <zhengjunyi@live.com>",
   "license": "MIT",
   "peerDependencies": {
-    "gatsby": "^3.3.0"
+    "@mdx-js/react": "^1.6.22",
+    "gatsby": "^3.14.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "babel-preset-gatsby": "^1.14.0",
+    "gatsby-plugin-image": "^1.14.1",
+    "gatsby-plugin-linaria": "^3.1.0",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-mdx": "^2.14.0",
+    "gatsby-plugin-offline": "^4.14.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-sharp": "^3.14.1",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "linaria": "^3.0.0-beta.13",
+    "prop-types": "^15.7.2",
+    "react-helmet": "^6.1.0"
   }
 }
