--- a/example/package.json
+++ b/example/package.json
@@ -8,10 +8,15 @@
     "develop": "gatsby develop",
     "build": "gatsby build"
   },
-  "dependencies": {
+  "peerDependencies": {
     "gatsby": "^3.14.2",
-    "gatsby-theme-terminal": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "gatsby-theme-terminal": "^0.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.4.1"
   }
 }
