--- a/gatsby-theme-terminal/package.json
+++ b/gatsby-theme-terminal/package.json
@@ -25,5 +25,8 @@
     "linaria": "^3.0.0-beta.13",
     "prop-types": "^15.7.2",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.4.1"
   }
 }
