--- a/example/package.json
+++ b/example/package.json
@@ -14,9 +14,9 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "gatsby-theme-terminal": "^0.0.1"
-  },
-  "devDependencies": {
-    "prettier": "^2.4.1"
+    "gatsby": "^3.14.2",
+    "gatsby-theme-terminal": "^0.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
