--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "prettier"
     ],
     "rules": {
+      "react/prop-types": "off",
       "prettier/prettier": "error"
     },
     "ignorePatterns": [
