--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,10 +33,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: |
-            node_modules
-            .yarn
-            .pnp.cjs
-            .pnp.js
+            node_modules/*
+            .yarn/*
+            .pnp.*
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-
       - name: Setup Node.js
