--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
-    "build": "gatsby build"
+    "build": "gatsby build",
+    "clean": "rm -rf .linaria-cache & gatsby clean"
   },
   "peerDependencies": {
     "gatsby": "^3.14.2",
