--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^3.14.2",
+    "gatsby-source-filesystem": "^3.14.0",
     "gatsby-theme-terminal": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
