--- a/gatsby-theme-terminal/package.json
+++ b/gatsby-theme-terminal/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-source-filesystem": "^3.14.0",
     "linaria": "^3.0.0-beta.13",
+    "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
