--- a/gatsby-theme-terminal/package.json
+++ b/gatsby-theme-terminal/package.json
@@ -26,10 +26,13 @@
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-source-filesystem": "^3.14.0",
     "linaria": "^3.0.0-beta.13",
-    "prism-react-renderer": "^1.2.1",
+    "prism-react-renderer": "file:./lib/prism-react-renderer",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.4.4"
   }
 }
