--- a/gatsby-theme-terminal/package.json
+++ b/gatsby-theme-terminal/package.json
@@ -33,6 +33,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@types/mdx-js__react": "^1.5.4",
     "typescript": "^4.4.4"
   }
 }
