fix(ci): use workspace to manage dependencies prism-react-renderer

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "workspaces": [
     "gatsby-theme-terminal",
+    "prism-react-renderer",
     "example"
   ],
   "packageManager": "yarn@3.0.2"
