--- a/prism-react-renderer/package.json
+++ b/prism-react-renderer/package.json
@@ -1,5 +1,6 @@
 {
   "name": "prism-react-renderer",
+  "version": "1.2.0",
   "sideEffects": false,
   "main": "index.cjs.js",
   "module": "index.js",
