--- a/gatsby-theme-terminal/package.json
+++ b/gatsby-theme-terminal/package.json
@@ -5,7 +5,8 @@
   "author": "Mogeko <zhengjunyi@live.com>",
   "license": "MIT",
   "scripts": {
-    "clean": "rm -rf content & gatsby clean"
+    "build": "tsc",
+    "clean": "rm -rf content dist & gatsby clean"
   },
   "peerDependencies": {
     "@mdx-js/react": "^1.6.22",
@@ -24,16 +25,20 @@
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-offline": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-typescript": "^3.14.0",
     "gatsby-source-filesystem": "^3.14.0",
     "linaria": "^3.0.0-beta.13",
     "prism-react-renderer": "1.2.0",
-    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@types/mdx-js__react": "^1.5.4",
-    "typescript": "^4.4.4"
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-helmet": "^6.1.4",
+    "typescript": "^4.4.4",
+    "typescript-styled-plugin": "^0.18.1"
   }
 }
