--- a/gatsby-theme-terminal/package.json
+++ b/gatsby-theme-terminal/package.json
@@ -28,7 +28,7 @@
     "gatsby-plugin-typescript": "^3.14.0",
     "gatsby-source-filesystem": "^3.14.0",
     "linaria": "^3.0.0-beta.13",
-    "prism-react-renderer": "1.2.0",
+    "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
