build: use tsc to do type check
It does not output compilation files

--- a/gatsby-theme-terminal/package.json
+++ b/gatsby-theme-terminal/package.json
@@ -5,7 +5,7 @@
   "author": "Mogeko <zhengjunyi@live.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --noEmit",
     "clean": "rm -rf content dist & gatsby clean"
   },
   "peerDependencies": {
