--- a/package.json
+++ b/package.json
@@ -5,12 +5,26 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "yarn workspace example build",
+    "build": "yarn workspaces foreach -t run build",
     "clean": "yarn workspaces foreach run clean",
     "develop": "yarn workspace example develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "lint": "eslint --fix ."
   },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "prettier": "^2.4.1"
+  },
+  "workspaces": [
+    "gatsby-theme-terminal",
+    "example"
+  ],
+  "packageManager": "yarn@3.0.2",
   "eslintConfig": {
     "env": {
       "browser": true,
@@ -55,19 +69,5 @@
   "prettier": {
     "tabWidth": 2,
     "singleQuote": true
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "prettier": "^2.4.1"
-  },
-  "workspaces": [
-    "gatsby-theme-terminal",
-    "example"
-  ],
-  "packageManager": "yarn@3.0.2"
+  }
 }
