--- a/gatsby-theme-terminal/package.json
+++ b/gatsby-theme-terminal/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc --noEmit",
-    "clean": "rm -rf content dist & gatsby clean"
+    "clean": "rm -rf dist & gatsby clean"
   },
   "peerDependencies": {
     "@mdx-js/react": "^1.6.22",
